<resources>
    <string name="app_name">True Citizen Test</string>
    <string name="true_button_text">True</string>
    <string name="false_button_text">False</string>
    <string name="prev_button_text">"Previous "</string>
    <string name="next_button_text" >Next</string>
    <string name="placeholder">Question Goes Here</string>
    <string name="image_related_to_quiz">Image related to Quiz</string>

    <string name="question_constitution">The Indian Constitution was adopted on 26th November, 1949.</string>
    <string name="question_citizenship">The Indian constitution allows dual citizenship.</string>
    <string name="question_railways">In 1853, the first Indian passenger train ran between Bombay and Thane.</string>
    <string name="question_president">The President of India is the Supreme Commander of the Armed Forces.</string>
    <string name="question_cji">Hon\'ble Mr. Justice Harilal Jekisundas Kania was the first Chief Justice of India.</string>
    <string name="question_chess">Chess originated in India.</string>
    <string name="question_borders">India shares its borders with 5 countries.</string>
    <string name="question_dposp">The idea of Directive Principles of State Policy was adopted in the Indian Constitution from the Constitution of Italy.</string>
    <string name="correct_answer">Your answer is correct!</string>
    <string name="wrong_answer">Your answer is wrong!</string>
    <string name="heading_text">State True or False:</string>

</resources>